second day second commit..

--- a/WEBSite/WebContent/bodyFolder/Left/left.html
+++ b/WEBSite/WebContent/bodyFolder/Left/left.html
@@ -8,12 +8,12 @@
 <h3>Fundamentals</h3>
 <hr>
 </font>
-<a href="identifiers.html">Identifiers</a><br/>
-<a href="datatypes.html">DataTypes</a><br/>
-<a href="literlas.html">Literals</a><br/>
-<a href="modifiers.html">Modifiers</a><br/>
-<a href="interface.html">Interface</a><br/>
-<a href="varargs.html">Var-Args Method</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/identifier.html" target="right">Identifiers</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/datatypes.html" target="right">DataTypes</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/literal.html" target="right">Literals</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/modifiers.html" target="right">Modifiers</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/interface.html" target="right">Interface</a><br/>
+<a href="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/var-args.html" target="right">Var-Args Method</a><br/>
 
 </body>
 </html>
