--- a/WEBSite/WebContent/bodyFolder/body/body.html
+++ b/WEBSite/WebContent/bodyFolder/body/body.html
@@ -1,5 +1,5 @@
 
 <frameset cols="18%,*">
-  <frame src="/E:/New folder/Spring/WEBSite/WebContent/bodyFolder/Left/left.html">
-  <frame src="/E:/New folder/Spring/WEBSite/WebContent/bodyFolder/Right/right.html">
+  <frame src="file:///C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/bodyFolder/Left/left.html">
+  <frame  name="right" src="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/bodyFolder/Right/right.html">
 </frameset>
