--- a/WEBSite/WebContent/home.html
+++ b/WEBSite/WebContent/home.html
@@ -3,7 +3,7 @@
 
 <frameset rows="8%,*,8%">
   <frame src="./headerFolder/header.html">
-  <frame src="./bodyFolder/body/body.html">
+  <frame src="C:/Users/ramnarayansah/git/WEB-Site/WEBSite/WebContent/bodyFolder/body/body.html">
   <frame src="./footerFolder/footer.html">
 </frameset>
 
